<resources>
    <string name="app_name">SportsNewsApp</string>
    <string name="sports">SPORTS</string>
    <string name="nfl">NFL</string>
    <string name="nba">NBA</string>
    <string name="mlb">MLB</string>
    <string name="news">NEWS</string>
    <string name="teams">TEAMS</string>
    <string name="standings">STANDINGS</string>
    <string name="stats">STATS</string>
    <string name="nfl_sports_news">NFL NEWS</string>
    <string name="nfl_teams">NFL TEAMS</string>
    <string name="nfl_standings">NFL STANDINGS</string>
    <string name="nfl_stats">NFL STATS</string>
    <string name="nba_sports_news">NBA NEWS</string>
    <string name="nba_teams">NBA TEAMS</string>
    <string name="nba_standings">NBA STANDINGS</string>
    <string name="nba_stats">NBA STATS</string>
    <string name="mlb_sports_news">MLB NEWS</string>
    <string name="mlb_teams">MLB TEAMS</string>
    <string name="mlb_standings">MLB STANDINGS</string>
    <string name="mlb_stats">MLB STATS</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="app_settings">App Settings</string>
    <string name="user_username">User Username</string>
    <string name="action_websearch">Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="welcome_message">Welcome to the SportsNews app, please click on the navigation drawer to begin viewing your favorite sports and players</string>
    <string name="team_name">TEAM NAME</string>
    <string name="division_standings">Division Standings</string>
    <string name="players">Players</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_signup">Cancel Signup</string>
    <string name="back">Back</string>
    <string name="edit_favorites">Edit Favorites</string>
    <string name="edit_profile">edit_profile</string>
    <string name="remember_login_info">Remember Login Info</string>

    <string-array name="sports_names_array">

        <item>@string/nfl</item>
        <item>@string/nba</item>
        <item>@string/mlb</item>

    </string-array>

    <string-array name="sports_array">

        <item>@string/nfl_sports_news</item>
        <item>@string/nfl_teams</item>
        <item>@string/nfl_standings</item>
        <item>@string/nfl_stats</item>
        <item>@string/nba_sports_news</item>
        <item>@string/nba_teams</item>
        <item>@string/nba_standings</item>
        <item>@string/nba_stats</item>
        <item>@string/mlb_sports_news</item>
        <item>@string/mlb_teams</item>
        <item>@string/mlb_standings</item>
        <item>@string/mlb_stats</item>

    </string-array>

    <string-array name="nfl_team_names">

        <item>Arizona Cardinals</item>
        <item>Atlanta Falcons</item>
        <item>Baltimore Ravens</item>
        <item>Buffalo Bills</item>
        <item>Carolina Panthers</item>
        <item>Chicago Bears</item>
        <item>Cincinnati Bengals</item>
        <item>Cleveland Browns</item>
        <item>Dallas Cowboys</item>
        <item>Denver Broncos</item>
        <item>Detroit Lions</item>
        <item>Green Bay Packers</item>
        <item>Houston Texans</item>
        <item>Indianapolis Colts</item>
        <item>Jacksonville Jaguars</item>
        <item>Kansas City Chiefs</item>
        <item>Los Angeles Chargers</item>
        <item>Los Angeles Rams</item>
        <item>Miami Dolphins</item>
        <item>Minnesota Vikings</item>
        <item>New England Patriots</item>
        <item>New Orleans Saints</item>
        <item>New York Giants</item>
        <item>New York Jets</item>
        <item>Oakland Raiders</item>
        <item>Philadelphia Eagles</item>
        <item>Pittsburgh Steelers</item>
        <item>San Francisco 49ers</item>
        <item>Seattle Seahawks</item>
        <item>Tampa Bay Buccaneers</item>
        <item>Tennessee Titans</item>
        <item>Washington Redskins</item>

    </string-array>

    <string-array name="nfl_division_names">

        <item>NFC WEST</item>
        <item>NFC NORTH</item>
        <item>NFC SOUTH</item>
        <item>NFC EAST</item>
        <item>AFC WEST</item>
        <item>AFC NORTH</item>
        <item>AFC SOUTH</item>
        <item>AFC EAST</item>

    </string-array>

    <string-array name="nba_team_names">

        <item>Atlanta Hawks</item>
        <item>Boston Celtics</item>
        <item>Brooklyn Nets</item>
        <item>Charlotte Hornets</item>
        <item>Chicago Bulls</item>
        <item>Cleveland Cavaliers</item>
        <item>Dallas Mavericks</item>
        <item>Denver Nuggets</item>
        <item>Detroit Pistons</item>
        <item>Golden State Warriors</item>
        <item>Houston Rockets</item>
        <item>Indiana Pacers</item>
        <item>Los Angeles Clippers</item>
        <item>Los Angeles Lakers</item>
        <item>Memphis Grizzlies</item>
        <item>Miami Heat</item>
        <item>Milwaukee Bucks</item>
        <item>Minnesota Timberwolves</item>
        <item>New Orleans Pelicans</item>
        <item>New York Knicks</item>
        <item>Oklahoma City Thunder</item>
        <item>Orlando Magic</item>
        <item>Philadelphia 76ers</item>
        <item>Phoenix Suns</item>
        <item>Portland Trail Blazers</item>
        <item>Sacramento Kings</item>
        <item>San Antonio Spurs</item>
        <item>Toronto Rapters</item>
        <item>Utah Jazz</item>
        <item>Washington Wizards</item>

    </string-array>

    <string-array name="nba_division_names">

        <item>Atlantic Division</item>
        <item>Central Division</item>
        <item>Southeast Division</item>
        <item>Northwest Division</item>
        <item>Pacific Division</item>
        <item>Southwest Division</item>

    </string-array>

    <string-array name="mlb_team_names">

        <item>Arizona Diamondbacks</item>
        <item>Atlanta Braves</item>
        <item>Baltimore Orioles</item>
        <item>Boston Red Sox</item>
        <item>Chicago Cubs</item>
        <item>Chicago White Sox</item>
        <item>Cincinnati Reds</item>
        <item>Cleveland Indians</item>
        <item>Colorado Rockies</item>
        <item>Detroit Tigers</item>
        <item>Houston Astros</item>
        <item>Kansas City Royals</item>
        <item>Los Angeles Angels</item>
        <item>Los Angeles Dodgers</item>
        <item>Miami Marlins</item>
        <item>Milwaukee Brewers</item>
        <item>Minnesota Twins</item>
        <item>New York Mets</item>
        <item>New York Yankees</item>
        <item>Oakland Athletics</item>
        <item>Philadelphia Phillies</item>
        <item>Pittsburgh Pirates</item>
        <item>St. Louis Cardinals</item>
        <item>San Diego Padres</item>
        <item>San Francisco Giants</item>
        <item>Seattle Mariners</item>
        <item>Tampa Bay Rays</item>
        <item>Texas Rangers</item>
        <item>Toronto Blue Jays</item>
        <item>Washington Nationals</item>

    </string-array>

    <string-array name="mlb_division_names">

        <item>American League East</item>
        <item>American League Central</item>
        <item>American League West</item>
        <item>National League East</item>
        <item>National League Central</item>
        <item>National League West</item>

    </string-array>

</resources>
