<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:title="NFL"

    >

        <menu>

            <item

                android:id="@+id/NFL_NEWS"
                android:title="@string/news"

            />

            <item

                android:id="@+id/NFL_TEAMS"
                android:title="@string/teams"

            />

            <item

                android:id="@+id/NFL_STANDINGS"
                android:title="@string/standings"

            />

            <item

                android:id="@+id/NFL_STATS"
                android:title="@string/stats"

            />

        </menu>

    </item>

    <item android:title="NBA">

        <menu>

            <item

                android:id="@+id/NBA_NEWS"
                android:title="@string/news"

            />

            <item

                android:id="@+id/NBA_TEAMS"
                android:title="@string/teams"

            />

            <item

                android:id="@+id/NBA_STANDINGS"
                android:title="@string/standings"

            />

            <item

                android:id="@+id/NBA_STATS"
                android:title="@string/stats"

            />

        </menu>

    </item>

    <item android:title="MLB">

        <menu>

            <item

                android:id="@+id/MLB_NEWS"
                android:title="@string/news"

            />

            <item

                android:id="@+id/MLB_TEAMS"
                android:title="@string/teams"

            />

            <item

                android:id="@+id/MLB_STANDINGS"
                android:title="@string/standings"

            />

            <item

                android:id="@+id/MLB_STATS"
                android:title="@string/stats"

            />

        </menu>

    </item>

</menu>